H3CIPMSJAVA-20180830/src/objects/Recommand_Part_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parts_Number__c</fullName>
        <label>Parts Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Serial_Number__c</fullName>
        <label>Parts Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommand_Parts_Number__c</fullName>
        <label>Recommand Parts Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommand_Parts_Serial_Number__c</fullName>
        <label>Recommand Parts Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recommand Part Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPR-{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>